Fix up the html so that #content wraps everything in the body

--- a/style.css
+++ b/style.css
@@ -30,10 +30,9 @@ a {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    gap: 15px;
 }
 
-#content {
+.main {
     background-color: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
@@ -53,7 +52,7 @@ a {
     background-color: rgb(135, 135, 135, .5);
 
     position: absolute;
-    top: calc(40%);
+    top: 40%;
 
     width: 100%;
     text-align: center;
